# lab9

./: CMakeLists.txt  zad1.c  zad2.c  zad3.c  zad4.c  zad6.c
lab10/: openmp_petle.c  openmp_watki_zmienne.c  wyniki
lab11/: search_max_openmp.c  test_search_max_openmp.c
